--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <path d="M6 9V6a4 4 0 018 0v3" stroke="#fff" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
       </svg>
       <div>
-        <h1>Simulador fotovoltaico (versión educativa)</h1>
+        <h1>Simulador fotovoltaico</h1>
         <div class="muted">Introduce parámetros y observa la energía estimada por día, mes y año.</div>
       </div>
     </header>
@@ -180,7 +180,7 @@
         </div>
 
         <div class="chart card" style="margin-top:12px;padding:10px;background:#000;">
-          <div class="muted">Producción estimada por mes</div>
+          <div class="muted">Producción estimada por mes en KWh</div>
           <svg id="bars" width="100%" height="160"></svg>
         </div>
 
